--- a/functional-trading.cabal
+++ b/functional-trading.cabal
@@ -11,6 +11,7 @@ executable myproject
         ContractsDSL
         EvaluationEngine
         ModelUtils
+        BenchEval
     build-depends:
         base >=4.14 && <5,
         time,
@@ -21,5 +22,7 @@ executable myproject
         tasty-quickcheck >=0.10,
         tasty-hunit >=0.10,
         HUnit >=1.6,
-        deepseq
+        deepseq,
+        criterion,
+        random
     default-language: Haskell2010
