--- a/functional-trading.cabal
+++ b/functional-trading.cabal
@@ -1,17 +1,62 @@
 cabal-version: >=1.10
-name: myproject
+name: functional-trading
 version: 0.1.0.0
 build-type: Simple
 
-executable myproject
-    main-is: Main.hs
-    hs-source-dirs: .
-    ghc-options: -Wall
-    other-modules:
+library
+    hs-source-dirs: src
+    exposed-modules:
         ContractsDSL
         EvaluationEngine
+        EvaluationEngineNoCache
         ModelUtils
-        BenchEval
+    build-depends:
+        base >=4.14 && <5,
+        time,
+        containers,
+        QuickCheck,
+        mtl,
+        deepseq
+    default-language: Haskell2010
+
+executable functional-trading
+    main-is: Main.hs
+    hs-source-dirs: src
+    ghc-options: -O2 -Wall
+    build-depends:
+        base >=4.14 && <5,
+        time,
+        containers,
+        mtl,
+        QuickCheck,
+        deepseq,
+        functional-trading
+    default-language: Haskell2010
+
+test-suite functional-trading-tests
+    type: exitcode-stdio-1.0
+    main-is: TestSuite.hs
+    hs-source-dirs: test
+    ghc-options: -O2 -Wall
+    build-depends:
+        base >=4.14 && <5,
+        time,
+        containers,
+        mtl,
+        QuickCheck,
+        tasty >=1.4,
+        tasty-quickcheck >=0.10,
+        tasty-hunit >=0.10,
+        HUnit >=1.6,
+        deepseq,
+        functional-trading
+    default-language: Haskell2010
+
+benchmark functional-trading-bench
+    type: exitcode-stdio-1.0
+    main-is: BenchEval.hs
+    hs-source-dirs: bench
+    ghc-options: -O2 -Wall
     build-depends:
         base >=4.14 && <5,
         time,
@@ -24,5 +69,6 @@ executable myproject
         HUnit >=1.6,
         deepseq,
         criterion,
-        random
+        random,
+        functional-trading
     default-language: Haskell2010
