--- a/functional-trading.cabal
+++ b/functional-trading.cabal
@@ -10,6 +10,7 @@ library
         EvaluationEngine
         EvaluationEngineNoCache
         ModelUtils
+        Main
     build-depends:
         base >=4.14 && <5,
         time,
@@ -56,9 +57,9 @@ test-suite functional-trading-tests
         functional-trading
     default-language: Haskell2010
 
-benchmark functional-trading-bench
+benchmark caching
     type: exitcode-stdio-1.0
-    main-is: BenchEval.hs
+    main-is: CachingBench.hs
     hs-source-dirs: bench
     ghc-options: -O2 -Wall
     build-depends:
