added support for knok-in options and grainYield observable

--- a/functional-trading.cabal
+++ b/functional-trading.cabal
@@ -12,6 +12,7 @@ library
         ModelUtils
         GUI
         Main
+        Parser
     build-depends:
         base >=4.14 && <5,
         time,
