--- a/functional-trading.cabal
+++ b/functional-trading.cabal
@@ -12,7 +12,7 @@ library
         ModelUtils
         GUI
         Main
-        Parser
+        ContractParser
     build-depends:
         base >=4.14 && <5,
         time,
@@ -20,7 +20,8 @@ library
         QuickCheck,
         mtl,
         deepseq,
-        threepenny-gui >= 0.9
+        threepenny-gui >= 0.9,
+        parsec
     default-language: Haskell2010
 
 executable functional-trading
@@ -35,7 +36,8 @@ executable functional-trading
         QuickCheck,
         deepseq,
         functional-trading,
-        threepenny-gui >= 0.9
+        threepenny-gui >= 0.9,
+        parsec
     other-modules:
         GUI
         ContractsDSL
@@ -59,7 +61,8 @@ test-suite functional-trading-tests
         tasty-hunit >=0.10,
         HUnit >=1.6,
         deepseq,
-        functional-trading
+        functional-trading,
+        parsec
     default-language: Haskell2010
 
 benchmark caching
