made svg size dynamic

--- a/functional-trading.cabal
+++ b/functional-trading.cabal
@@ -57,6 +57,7 @@ executable functional-trading
         ContractsDSL
         EvaluationEngine
         ModelUtils
+        GUI
     default-language: Haskell2010
 
 test-suite functional-trading-tests
