--- a/functional-trading.cabal
+++ b/functional-trading.cabal
@@ -59,6 +59,7 @@ executable functional-trading
         EvaluationEngine
         ModelUtils
         ContractVisualiser
+        ContractParser
     default-language: Haskell2010
 
 test-suite functional-trading-tests
