--- a/functional-trading.cabal
+++ b/functional-trading.cabal
@@ -7,8 +7,7 @@ library
     hs-source-dirs: src src/library
     exposed-modules:
         ContractsDSL
-        EvaluationEngine
-        EvaluationEngineNoCache
+        ValuationEngine
         ModelUtils
         Main
         ContractParser
@@ -57,7 +56,7 @@ executable functional-trading
         containers
     other-modules:
         ContractsDSL
-        EvaluationEngine
+        ValuationEngine
         ModelUtils
         ContractVisualiser
         ContractParser
