improved cache benchmarking

--- a/functional-trading.cabal
+++ b/functional-trading.cabal
@@ -98,4 +98,6 @@ benchmark caching
         criterion,
         random,
         functional-trading
+    other-modules:
+        ValuationEngineNoCache
     default-language: Haskell2010
